# TecaTrack-Backend

./: .env-example  .gitignore  AGENT.md  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4d4dcad48d6b_make_user_full_name_non_nullable.py  589003c7401f_initial_schema.py  6301427ba51c_add_indexes_and_receipt_status_enum.py  81f3e396c8cf_add_cuil_to_users.py  84d06d592174_add_cbu_as_string_and_add_constraint.py
doc/: poc-datamodel.dbdiagram  poc-datamodel.dbml
src/: config.py  database.py  models.py
src/schemas/: __init__.py  user.py
src/tecatrack_backend/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py
src/tecatrack_backend/core/: config.py  database.py  exception_handlers.py  exceptions.py
src/tecatrack_backend/ocr/: image_converter.py  ocr_engine.py  ocr_processor.py  patterns.py
src/tecatrack_backend/repositories/: __init__.py  account_repository.py  file_repository.py  user_repository.py
src/tecatrack_backend/routers/: account_router.py  ocr_router.py  receipt_router.py  user_router.py
src/tecatrack_backend/schemas/: __init__.py  account_schemas.py  file_schemas.py  ocr_schemas.py  user_schemas.py
src/tecatrack_backend/services/: account_service.py  ocr_service.py  receipt_service.py  user_service.py
tests/: conftest.py
tests/core/: test_exception_handler.py
tests/integration/: conftest.py
tests/integration/api/: test_account_api.py  test_ocr_api.py  test_receipt_api.py  test_user_api.py
tests/test_services/: test_user_service.py
(+9 files in other folders)
