[project]
name = "tecatrack-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.44.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.10",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.format]
quote-style = "double"