[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tecatrack-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.135.3",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.44.0",
    "python-dotenv==1.0.1",
    "asyncpg==0.31.0",
    "email-validator==2.3.0",
    "opencv-python-headless==4.13.0.92",
    "pymupdf==1.27.2.2",
    "paddleocr==3.4.1",
    "paddlepaddle==3.3.1",
    "python-multipart==0.0.26",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.10",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
